refactor(sonarlint): fix sonarlint problem